[gd_scene load_steps=23 format=2]

[ext_resource path="res://princess/princess.png" type="Texture" id=1]
[ext_resource path="res://addons/virtual_gamepad/virtualbutton.gd" type="Script" id=2]
[ext_resource path="res://princess/idle.gd" type="Script" id=3]
[ext_resource path="res://addons/fsm/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://addons/virtual_gamepad/virtualgamepad.gd" type="Script" id=5]
[ext_resource path="res://addons/virtual_gamepad/playerControl.gd" type="Script" id=6]
[ext_resource path="res://princess/walk.gd" type="Script" id=7]
[ext_resource path="res://addons/2d_phys/shared_physics.gd" type="Script" id=8]
[ext_resource path="res://princess/airborn.gd" type="Script" id=9]
[ext_resource path="res://princess/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://princess/bump.wav" type="AudioStream" id=11]
[ext_resource path="res://addons/2d_cam/dolly.gd" type="Script" id=12]

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 10 )

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 11 )

[sub_resource type="Animation" id=1]
resource_name = "falling"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 50, 57 ), Rect2( 50, 0, 49, 57 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 12.5 ), Vector2( -4.5, 12.5 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 46, 57, 41, 56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.5, 12 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 147, 0, 49, 50 ), Rect2( 36, 113, 32, 58 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.5, 16 ), Vector2( -7, 11 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 87, 104, 42, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 13.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 129, 104, 40, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 10.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "rising"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 107, 36, 55 ), Rect2( 68, 157, 35, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 13.5 ), Vector2( -4.5, 12.5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("graphic/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 99, 52, 46, 52 ), Rect2( 147, 50, 45, 54 ), Rect2( 99, 0, 48, 52 ), Rect2( 0, 57, 46, 50 ), Rect2( 99, 52, 46, 52 ), Rect2( 147, 50, 45, 54 ), Rect2( 99, 0, 48, 52 ), Rect2( 0, 57, 46, 50 ), Rect2( 99, 52, 46, 52 ), Rect2( 147, 50, 45, 54 ), Rect2( 99, 0, 48, 52 ), Rect2( 0, 57, 46, 50 ), Rect2( 99, 52, 46, 52 ), Rect2( 147, 50, 45, 54 ), Rect2( 99, 0, 48, 52 ), Rect2( 0, 57, 46, 50 ), Rect2( 99, 52, 46, 52 ), Rect2( 147, 50, 45, 54 ), Rect2( 99, 0, 48, 52 ), Rect2( 0, 57, 46, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("graphic/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 14 ), Vector2( -2.5, 13 ), Vector2( -2, 14 ), Vector2( -1, 15 ), Vector2( -3, 14 ), Vector2( -2.5, 13 ), Vector2( -2, 14 ), Vector2( -1, 15 ), Vector2( -3, 14 ), Vector2( -2.5, 13 ), Vector2( -2, 14 ), Vector2( -1, 15 ), Vector2( -3, 14 ), Vector2( -2.5, 13 ), Vector2( -2, 14 ), Vector2( -1, 15 ), Vector2( -3, 14 ), Vector2( -2.5, 13 ), Vector2( -2, 14 ), Vector2( -1, 15 ) ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 11.0
height = 22.0

[node name="princess" type="KinematicBody2D"]
z_index = 5

[node name="jump_fx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -7 )
stream = SubResource( 9 )
bus = "effects"

[node name="bump_fx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource( 10 )
bus = "effects"

[node name="SharedPhysics" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 8 )
base_gravity = 10.0

[node name="graphic" type="Position2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="Sprite" parent="graphic"]
position = Vector2( 0, -40 )
texture = ExtResource( 1 )
offset = Vector2( -2, 14 )
region_enabled = true
region_rect = Rect2( 99, 0, 48, 52 )

[node name="camera_target" type="Position2D" parent="graphic"]
position = Vector2( 51, -25 )

[node name="dolly" type="RemoteTransform2D" parent="graphic/camera_target"]
position = Vector2( -51, 25 )
update_rotation = false
update_scale = false
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/falling = SubResource( 1 )
"anims/idle 1" = SubResource( 2 )
anims/into_jump = SubResource( 3 )
anims/land = SubResource( 4 )
anims/rise_to_fall = SubResource( 5 )
anims/rising = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -22 )
shape = SubResource( 8 )

[node name="VirtualGamepad" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 5 )

[node name="vp_jump" type="Node" parent="VirtualGamepad"]
script = ExtResource( 2 )

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 6 )

[node name="action_machine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="action_machine"]
script = ExtResource( 3 )
drag_multiplier = 5.0

[node name="walk" type="Node" parent="action_machine"]
script = ExtResource( 7 )
walk_speed_threshold = 120.0
walk_acceleration = 7.0

[node name="airborn" type="Node" parent="action_machine"]
script = ExtResource( 9 )
jump_strength = 250.0
rising_gravity_multiplier = 1.0
falling_gravity_multiplier = 3

[node name="coyote_timer" type="Timer" parent="action_machine/airborn"]
wait_time = 0.2
one_shot = true
